feat: use app data in index

--- a/src/index.njk
+++ b/src/index.njk
@@ -4,6 +4,6 @@ styles: []
 ---
 
 <div class="content">
-    <h1><span aria-hidden="true" role='img'>✨</span>&nbsp;Cria Plus</h1>
-    <p>An expanded starter template for Toollama.com applications</p>
+    <h1><span aria-hidden="true" role='img'>{{ app.emoji }}</span>&nbsp;{{ app.title }}</h1>
+    <p>{{ app.description }}</p>
 </div>
