feat: add eleventy-plugin-emoji

--- a/src/index.njk
+++ b/src/index.njk
@@ -4,6 +4,6 @@ styles: []
 ---
 
 <div class="content">
-    <h1><span aria-hidden="true" role='img'>{{ app.emoji }}</span>&nbsp;{{ app.title }}</h1>
+    <h1>{% emoji app.emoji %}&nbsp;{{ app.title }}</h1>
     <p>{{ app.description }}</p>
 </div>
